@@ -3330,7 +3330,7 @@ Save changes?</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../modularsynth.cpp" line="1144"/>
+        <location filename="../modularsynth.cpp" line="1143"/>
         <source>Load Colors</source>
         <translation type="unfinished">Farben lasen</translation>
     </message>
@@ -3339,17 +3339,17 @@ Save changes?</source>
         <translation type="obsolete">Farbschemadateien (*.acs)</translation>
     </message>
     <message>
-        <location filename="../modularsynth.cpp" line="1152"/>
+        <location filename="../modularsynth.cpp" line="1151"/>
         <source>Could not open file.</source>
         <translation type="unfinished">Konnte Datei nicht öffnen.</translation>
     </message>
     <message>
-        <location filename="../modularsynth.cpp" line="1186"/>
+        <location filename="../modularsynth.cpp" line="1185"/>
         <source>Save Colors</source>
         <translation type="unfinished">Farben speichern</translation>
     </message>
     <message>
-        <location filename="../modularsynth.cpp" line="1198"/>
+        <location filename="../modularsynth.cpp" line="1197"/>
         <source>Could not save file.</source>
         <translation type="unfinished">Konnte Datei nicht speichern.</translation>
     </message>
@@ -3359,28 +3359,28 @@ Save changes?</source>
         <translation>Über </translation>
     </message>
     <message>
-        <location filename="../modularsynth.cpp" line="1145"/>
-        <location filename="../modularsynth.cpp" line="1187"/>
+        <location filename="../modularsynth.cpp" line="1144"/>
+        <location filename="../modularsynth.cpp" line="1186"/>
         <source>AlsaModularSynth Color files</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../modularsynth.cpp" line="1277"/>
+        <location filename="../modularsynth.cpp" line="1276"/>
         <source>Loading LADSPA plugin &quot;%1&quot; from library &quot;%2&quot;.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../modularsynth.cpp" line="1283"/>
+        <location filename="../modularsynth.cpp" line="1282"/>
         <source>Could not find LADSPA plugin &quot;%1&quot; from library &quot;%2&quot;.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../modularsynth.cpp" line="1500"/>
+        <location filename="../modularsynth.cpp" line="1499"/>
         <source>Input port %1 of module %2 is already connected. New connection to module %3 ignored.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../modularsynth.cpp" line="1757"/>
+        <location filename="../modularsynth.cpp" line="1756"/>
         <source>Unknown MIDI controller tag found: %1</source>
         <translation type="unfinished"></translation>
     </message>
@@ -3652,27 +3652,27 @@ Save changes?</source>
         <translation type="obsolete">Keine Verbindung möglich.</translation>
     </message>
     <message>
-        <location filename="../modularsynth.cpp" line="1793"/>
+        <location filename="../modularsynth.cpp" line="1792"/>
         <source>No title for tab &apos;%1&apos; found.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../modularsynth.cpp" line="1809"/>
+        <location filename="../modularsynth.cpp" line="1808"/>
         <source>No data for frame &apos;%1&apos; found.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../modularsynth.cpp" line="1824"/>
+        <location filename="../modularsynth.cpp" line="1823"/>
         <source>No parameter values found.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../modularsynth.cpp" line="1833"/>
+        <location filename="../modularsynth.cpp" line="1832"/>
         <source>No parameter name &apos;%1&apos; found.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../modularsynth.cpp" line="1899"/>
+        <location filename="../modularsynth.cpp" line="1898"/>
         <source>No name for preset &apos;%1&apos; found.</source>
         <translation type="unfinished"></translation>
     </message>
